# selectme

./: Cargo.toml  README.md
.github/workflows/: ci.yml  rust.yml  weekly.yml
benches/: select_benches.rs
build-benches/selectme/: Cargo.toml
build-benches/selectme/src/: main.rs
build-benches/tokio/: Cargo.toml
build-benches/tokio/src/: main.rs
examples/: basic.rs  basic_inline.rs  errors.rs  inline.rs  large_select.rs  multiple_borrow.rs  selectme_main.rs  static_select.rs  stream_collect.rs
selectme-macros/: Cargo.toml  README.md
selectme-macros/src/: error.rs  into_tokens.rs  lib.rs  output.rs  parser.rs  parsing.rs  to_tokens.rs  tok.rs  token_stream.rs
selectme-macros/src/entry/: mod.rs  output.rs  parser.rs
selectme-macros/src/select/: mod.rs  output.rs  parser.rs
src/: atomic_waker.rs  bias.rs  lib.rs  macros.rs  poll_fn.rs  poller.rs  poller_waker.rs  rand.rs  select.rs  set.rs  static_select.rs  static_waker.rs
tests/: poller_test.rs  select_struct_pattern.rs  ui.rs
tests/ui/: entry_arguments_fail.rs  entry_arguments_fail.stderr  entry_invalid_inputs_fail.rs  entry_invalid_inputs_fail.stderr  entry_type_mismatch_fail.rs  entry_type_mismatch_fail.stderr  select_empty_fail.rs  select_empty_fail.stderr  select_eof_fail.rs  select_eof_fail.stderr  select_error_recovery_fail.rs  select_error_recovery_fail.stderr  select_pass.rs  select_static_fail.rs  select_static_fail.stderr
