[package]
name = "selectme"
version = "0.6.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/udoprog/selectme"
homepage = "https://github.com/udoprog/selectme"
documentation = "https://docs.rs/selectme"
description = """
A fast and fair select! macro for asynchronous Rust.
"""
categories = ["asynchronous", "concurrency"]

[features]
default = ["std", "random"]
std = []
random = []
tokio-entry = ["selectme-macros/tokio-entry"]

[dependencies]
selectme-macros = { path = "selectme-macros", version = "0.6.0" }

[dev-dependencies]
trybuild = "1.0"
tokio = { version = "1.16.1", features = ["macros", "time", "rt", "rt-multi-thread"] }
tokio-stream = "0.1.8"
rand = "0.8.5"
pin-project = "1.0.10"

[workspace]
members = [
    "selectme-macros",
    "build-benches/*"
]
