[package]
name = "selectme"
version = "0.7.3"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.56"
description = "A fast and fair select! macro for asynchronous Rust."
documentation = "https://docs.rs/selectme"
readme = "README.md"
homepage = "https://github.com/udoprog/selectme"
repository = "https://github.com/udoprog/selectme"
license = "MIT OR Apache-2.0"
keywords = ["select", "tokio"]
categories = ["asynchronous", "concurrency"]

[features]
default = ["std", "random"]
std = []
random = []
tokio-entry = ["selectme-macros/tokio-entry"]

[dependencies]
selectme-macros = { version = "=0.7.3", path = "selectme-macros" }

[dev-dependencies]
trybuild = "1.0.80"
tokio = { version = "1.27.0", features = ["macros", "time", "rt", "rt-multi-thread"] }
tokio-stream = "0.1.12"
rand = "0.8.5"
pin-project = "1.0.12"
criterion = "0.4.0"
rustversion = "1.0.12"

[workspace]
members = [
    "selectme-macros",
    "build-benches/*"
]
