[package]
name = "selectme-macros"
version = "0.7.1"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.60"
description = """
A fast and fair select! macro for asynchronous Rust.
"""
documentation = "https://docs.rs/selectme"
readme = "README.md"
homepage = "https://github.com/udoprog/selectme"
repository = "https://github.com/udoprog/selectme"
license = "MIT/Apache-2.0"
keywords = ["select", "tokio"]
categories = ["asynchronous", "concurrency"]

[features] 
tokio-entry = []

[lib]
proc-macro = true
